@startuml
annotation java.lang.Override
annotation java.lang.SuppressWarnings
class com.sun.glass.events.KeyEvent
class java.util.ArrayList
class java.util.Calendar
class javax.swing.JComboBox
class javax.swing.JFrame
class javax.swing.JOptionPane
class patient.care.Box
class patient.care.BoxDAO
class patient.care.Date
class patient.care.Doctor
class patient.care.DoctorDAO
class patient.care.Patient
class patient.care.PatientCare
class patient.care.PatientDAO
class patient.care.PatientsForm
class patient.care.Person
patient.care.Box ..> java.lang.Override
patient.care.Box ..> java.util.ArrayList
patient.care.BoxDAO ..> java.util.ArrayList
patient.care.Date ..> java.lang.Override
patient.care.Date ..> java.util.Calendar
patient.care.Doctor ..> java.lang.Override
patient.care.Doctor --|> patient.care.Person
patient.care.DoctorDAO ..> java.util.ArrayList
patient.care.Patient ..> java.lang.Override
patient.care.Patient --|> patient.care.Person
patient.care.PatientDAO ..> java.util.ArrayList
patient.care.PatientsForm ..> java.lang.SuppressWarnings
patient.care.PatientsForm ..> com.sun.glass.events.KeyEvent
patient.care.PatientsForm ..> java.util.ArrayList
patient.care.PatientsForm ..> javax.swing.JComboBox
patient.care.PatientsForm --|> javax.swing.JFrame
patient.care.PatientsForm ..> javax.swing.JOptionPane
patient.care.Person ..> java.lang.Override
@enduml